# alpha-lab

./: .gitignore  README.md  pyproject.toml
research/: 001_trend_following.md
src/alpha_lab/data/: loader.py  validation.py
tests/: test_loader.py  test_validation.py
